# strava-activity-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
strava_cli/: __init__.py  cli.py  client.py  models.py
